feat: actualizar TokenService para incluir ID de usuario, correo electrónico y roles en la generación de tokens